# wifi6-vs-wifi5-simulation

./: .gitignore  .lock-ns3_linux_build  CMakeLists.txt  README.md  compare_wifi5_wifi6.py  convert_wifi6_to_csv.py  plot_packet_loss.py  plot_wifi5_mcs_throughput.py  plot_wifi5_packet_loss_mcs.py  plot_wifi6.py  plot_wifi6_guard_interval.py  plot_wifi6_throughput.py  table-frame-success-rate-ofdm.plt  wifi5_custom.cc  wifi5_results.csv  wifi5_results.txt  wifi6_custom.cc  wifi6_mcs800ns.csv  wifi6_results.csv  wifi6_results.txt
cmake-cache/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  ns3config.txt  ns3scratches
cmake-cache/examples/: cmake_install.cmake
cmake-cache/examples/channel-models/: cmake_install.cmake
cmake-cache/examples/energy/: cmake_install.cmake
cmake-cache/examples/error-model/: cmake_install.cmake
cmake-cache/examples/ipv6/: cmake_install.cmake
cmake-cache/examples/matrix-topology/: cmake_install.cmake
cmake-cache/examples/naming/: cmake_install.cmake
cmake-cache/examples/realtime/: cmake_install.cmake
cmake-cache/examples/routing/: cmake_install.cmake
cmake-cache/examples/socket/: cmake_install.cmake
cmake-cache/examples/stats/: cmake_install.cmake
cmake-cache/examples/tcp/: cmake_install.cmake
cmake-cache/examples/traffic-control/: cmake_install.cmake
cmake-cache/examples/tutorial/: cmake_install.cmake
cmake-cache/examples/udp/: cmake_install.cmake
cmake-cache/examples/udp-client-server/: cmake_install.cmake
cmake-cache/examples/wireless/: cmake_install.cmake
cmake-cache/pkgconfig/: ns3-antenna.pc  ns3-aodv.pc  ns3-applications.pc  ns3-bridge.pc  ns3-buildings.pc  ns3-config-store.pc  ns3-core.pc  ns3-csma-layout.pc  ns3-csma.pc  ns3-dsdv.pc  ns3-dsr.pc  ns3-energy.pc  ns3-fd-net-device.pc  ns3-flow-monitor.pc  ns3-internet-apps.pc  ns3-internet.pc  ns3-lr-wpan.pc  ns3-lte.pc  ns3-mesh.pc  ns3-mobility.pc  ns3-netanim.pc  ns3-network.pc  ns3-nix-vector-routing.pc  ns3-olsr.pc  ns3-point-to-point-layout.pc  ns3-point-to-point.pc  ns3-propagation.pc  ns3-sixlowpan.pc  ns3-spectrum.pc  ns3-stats.pc  ns3-tap-bridge.pc  ns3-topology-read.pc  ns3-traffic-control.pc  ns3-uan.pc  ns3-virtual-net-device.pc  ns3-wifi.pc  ns3-wimax.pc  ns3-zigbee.pc
cmake-cache/scratch/: cmake_install.cmake
cmake-cache/scratch/nested-subdir/: cmake_install.cmake
cmake-cache/src/: cmake_install.cmake
cmake-cache/src/antenna/: cmake_install.cmake
cmake-cache/src/antenna/examples/: cmake_install.cmake
cmake-cache/src/aodv/: cmake_install.cmake
cmake-cache/src/aodv/examples/: cmake_install.cmake
cmake-cache/src/applications/: cmake_install.cmake
cmake-cache/src/applications/examples/: cmake_install.cmake
cmake-cache/src/bridge/: cmake_install.cmake
cmake-cache/src/bridge/examples/: cmake_install.cmake
cmake-cache/src/brite/: cmake_install.cmake
cmake-cache/src/buildings/: cmake_install.cmake
cmake-cache/src/buildings/examples/: cmake_install.cmake
cmake-cache/src/click/: cmake_install.cmake
cmake-cache/src/config-store/: cmake_install.cmake
cmake-cache/src/config-store/examples/: cmake_install.cmake
cmake-cache/src/core/: cmake_install.cmake
cmake-cache/src/core/examples/: cmake_install.cmake
cmake-cache/src/csma/: cmake_install.cmake
cmake-cache/src/csma-layout/: cmake_install.cmake
cmake-cache/src/csma-layout/examples/: cmake_install.cmake
cmake-cache/src/csma/examples/: cmake_install.cmake
cmake-cache/src/dsdv/: cmake_install.cmake
cmake-cache/src/dsdv/examples/: cmake_install.cmake
cmake-cache/src/dsr/: cmake_install.cmake
cmake-cache/src/dsr/examples/: cmake_install.cmake
cmake-cache/src/energy/: cmake_install.cmake
cmake-cache/src/energy/examples/: cmake_install.cmake
cmake-cache/src/fd-net-device/: cmake_install.cmake
cmake-cache/src/fd-net-device/examples/: cmake_install.cmake
cmake-cache/src/flow-monitor/: cmake_install.cmake
cmake-cache/src/flow-monitor/examples/: cmake_install.cmake
cmake-cache/src/internet/: cmake_install.cmake
cmake-cache/src/internet-apps/: cmake_install.cmake
cmake-cache/src/internet-apps/examples/: cmake_install.cmake
cmake-cache/src/internet/examples/: cmake_install.cmake
cmake-cache/src/lr-wpan/: cmake_install.cmake
cmake-cache/src/lr-wpan/examples/: cmake_install.cmake
cmake-cache/src/lte/: cmake_install.cmake
cmake-cache/src/lte/examples/: cmake_install.cmake
cmake-cache/src/mesh/: cmake_install.cmake
cmake-cache/src/mesh/examples/: cmake_install.cmake
cmake-cache/src/mobility/: cmake_install.cmake
cmake-cache/src/mobility/examples/: cmake_install.cmake
cmake-cache/src/netanim/: cmake_install.cmake
cmake-cache/src/netanim/examples/: cmake_install.cmake
cmake-cache/src/network/: cmake_install.cmake
cmake-cache/src/network/examples/: cmake_install.cmake
cmake-cache/src/nix-vector-routing/: cmake_install.cmake
cmake-cache/src/nix-vector-routing/examples/: cmake_install.cmake
cmake-cache/src/olsr/: cmake_install.cmake
cmake-cache/src/olsr/examples/: cmake_install.cmake
cmake-cache/src/openflow/: cmake_install.cmake
cmake-cache/src/point-to-point/: cmake_install.cmake
cmake-cache/src/point-to-point-layout/: cmake_install.cmake
cmake-cache/src/propagation/: cmake_install.cmake
cmake-cache/src/sixlowpan/: cmake_install.cmake
cmake-cache/src/sixlowpan/examples/: cmake_install.cmake
cmake-cache/src/spectrum/: cmake_install.cmake
cmake-cache/src/stats/: cmake_install.cmake
cmake-cache/src/tap-bridge/: cmake_install.cmake
cmake-cache/src/topology-read/: cmake_install.cmake
cmake-cache/src/traffic-control/: cmake_install.cmake
cmake-cache/src/uan/: cmake_install.cmake
cmake-cache/src/virtual-net-device/: cmake_install.cmake
cmake-cache/src/wifi/: cmake_install.cmake
cmake-cache/src/wimax/: cmake_install.cmake
cmake-cache/src/zigbee/: cmake_install.cmake
cmake-cache/utils/: cmake_install.cmake
myenv/: pyvenv.cfg
scratch/: README.md  plot_wifi5_throughput_channelwidth.py  plot_wifi5_vs_wifi6_packet_loss_mcs.py  plot_wifi6_throughput_vs_width.py
(+12 files in other folders)
